--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="buttons">
-                <button id="start" onclick="startStop()">Start</button>
+                <button id="startStop" onclick="startStop()">Start</button>
                 <button id="reset" onclick="reset()">Reset</button>
             </div>
 
